--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title>Busertech</title>
     <meta charset="utf-8" />
     <meta
@@ -13,6 +14,7 @@
     /></noscript>
   </head>
   <body class="is-preload">
+
     <!-- Page Wrapper -->
     <div id="page-wrapper">
       <!-- Banner -->
@@ -62,355 +64,8 @@
             </p>
             <p>Tem alguma sugestão? Cria uma Issue 🐞 lá!</p>
 
-            <section class="features">
-              <article>
-                <h3 class="major">Ana Carolina</h3>
-                <a
-                  href="https://anacmas.github.io/Desafio-final/	"
-                  class="special"
-                  target="_blank"
-                  >anacmas</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Ana Clara</h3>
-                <a
-                  href="https://anaclaracoelho.github.io/Dfinal_paginapessoal/	"
-                  class="special"
-                  target="_blank"
-                  >AnaClaraCoelho</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Beatriz Ramalho</h3>
-                <a
-                  href="https://beatrizresteves.github.io/Desafio_final_pgpessoal/	"
-                  class="special"
-                  target="_blank"
-                  >Beatrizresteves</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Breno Martins</h3>
-                <a
-                  href="https://obrenoms.github.io/d8.2/"
-                  class="special"
-                  target="_blank"
-                  >oBrenoMS</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Bruna Andrade</h3>
-                <a
-                  href="https://andradebru.github.io/dfinal-minha-pagina/	"
-                  class="special"
-                  target="_blank"
-                  >andradebru</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Cainã Lucas</h3>
-                <a
-                  href="https://cainlucas.github.io/paginaoficial/"
-                  class="special"
-                  target="_blank"
-                  >cainlucas</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Caio Peternela</h3>
-                <a
-                  href="https://caiopeternela.github.io/dfinal-pagina-pessoal/pagina-pessoal/index.html	"
-                  class="special"
-                  target="_blank"
-                  >caiopeternela</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Clara Santos</h3>
-                <a
-                  href="https://clarasantosmf.github.io/BuserTech-D8-Personal-page/	"
-                  class="special"
-                  target="_blank"
-                  >ClaraSantosmf</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Daniel Alves</h3>
-                <a
-                  href="https://inczdan.github.io/D8-PgPessoal/	"
-                  class="special"
-                  target="_blank"
-                  >inczDan</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Daniel Dantas</h3>
-                <a
-                  href="https://danidanis.github.io/D--Final/	"
-                  class="special"
-                  target="_blank"
-                  >DaniDanis</a
-                >
-              </article>
-              <article>
-                <h3 class="major">David Satoshi</h3>
-                <a
-                  href="https://davidsatag.github.io/Pagina_pessoal/"
-                  class="special"
-                  target="_blank"
-                  >davidsatag</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Edinaildo Costa</h3>
-                <a
-                  href="https://edinaildo.github.io/Desafio-Final/"
-                  class="special"
-                  target="_blank"
-                  >edinaildo</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Eliel Clementino</h3>
-                <a
-                  href="https://elielclementino.github.io/D9_minha_pagina_pessoal/	"
-                  class="special"
-                  target="_blank"
-                  >ElielClementino</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Evandro Pereira</h3>
-                <a
-                  href="https://evandropcs.github.io/Pagina-Pessoal/	"
-                  class="special"
-                  target="_blank"
-                  >evandropcs</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Fabricio Assunção</h3>
-                <a
-                  href="https://fbc00.github.io/p-gina-pessoal-desafioFinal/"
-                  class="special"
-                  target="_blank"
-                  >fbc00</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Felipe Soares</h3>
-                <a
-                  href="https://felipesoaresfl.github.io/busertech-D9-personal-page/"
-                  class="special"
-                  target="_blank"
-                  >felipesoaresfl</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Fernanda Liz</h3>
-                <a
-                  href="https://fernandalizs.github.io/Desafio-Final/	"
-                  class="special"
-                  target="_blank"
-                  >fernandalizs</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Gabriel Santos</h3>
-                <a
-                  href="https://gabriels999.github.io/DF-PaginaPessoal/	"
-                  class="special"
-                  target="_blank"
-                  >Gabriels999</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Gabriela Victoria</h3>
-                <a
-                  href="https://gabyvictoria0122.github.io/Minha-Pagina-Pessoal/	"
-                  class="special"
-                  target="_blank"
-                  >GabyVictoria0122</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Gislane Nunes</h3>
-                <a
-                  href="https://gf-nunes.github.io/D9.P-ginaPessoal/"
-                  class="special"
-                  target="_blank"
-                  >gf-nunes</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Glória Felix</h3>
-                <a
-                  href="https://globrito.github.io/d.9_pagina_pessoal_final_/"
-                  class="special"
-                  target="_blank"
-                  >globrito</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Ingrid Caroline</h3>
-                <a
-                  href="https://carolineingrid.github.io/D-Final-Pagina-Pessoal/"
-                  class="special"
-                  target="_blank"
-                  >carolineingrid</a
-                >
-              </article>
-              <article>
-                <h3 class="major">João Vitor</h3>
-                <a
-                  href="https://joaoprocopio.github.io/dfinal-pag-pessoal/"
-                  class="special"
-                  target="_blank"
-                  >joaoprocopio</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Laura Nascimento</h3>
-                <a
-                  href="https://launasci.github.io/D.FinalPagPessoal/"
-                  class="special"
-                  target="_blank"
-                  >launasci</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Lorrana Camargo</h3>
-                <a
-                  href="https://lorrananeves.github.io/dfinal/"
-                  class="special"
-                  target="_blank"
-                  >lorrananeves</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Lucas Mariano</h3>
-                <a
-                  href="https://lukemariano.github.io/D9-Pagina-Pessoal/	"
-                  class="special"
-                  target="_blank"
-                  >lukemariano</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Lucca Nunes</h3>
-                <a
-                  href="https://luccaribeiro.github.io/d9-final/	"
-                  class="special"
-                  target="_blank"
-                  >luccaribeiro</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Marcela Lima</h3>
-                <a
-                  href="https://marcelavie.github.io/Pagina-pessoal/"
-                  class="special"
-                  target="_blank"
-                  >marcelavie</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Marcelo Henrique</h3>
-                <a
-                  href="https://mhenrique94.github.io/DFinal-Pag_Pessoal/"
-                  class="special"
-                  target="_blank"
-                  >mhenrique94</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Marcos Ornellas</h3>
-                <a
-                  href="https://129-ornellas.github.io/P-gina-Pessoal---Marcos-Ornellas/	"
-                  class="special"
-                  target="_blank"
-                  >129-ornellas</a
-                >
-              </article>
-              <article>
-                <h3 class="major">marcos viana</h3>
-                <a
-                  href="https://marcosgrandesso.github.io/D_Final_Pag_pessoal_marcos/	"
-                  class="special"
-                  target="_blank"
-                  >MarcosGrandesso</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Marília Moraes</h3>
-                <a
-                  href="https://marilia-borgo.github.io/Portfolio_2022/	"
-                  class="special"
-                  target="_blank"
-                  >marilia-borgo</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Rafael Leone</h3>
-                <a
-                  href="https://rafaelleone.github.io/dfinal/index.html"
-                  class="special"
-                  target="_blank"
-                  >rafaelleone</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Roberto de Moraes Zarzur</h3>
-                <a
-                  href="https://rdemora2.github.io/D.Final---Pagina_Pessoal/	"
-                  class="special"
-                  target="_blank"
-                  >Rdemora2</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Ronald Perdigão</h3>
-                <a
-                  href="https://ronald-ps.github.io/Page-ronald/"
-                  class="special"
-                  target="_blank"
-                  >ronald-ps</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Sara Brangioni Santa Rita</h3>
-                <a
-                  href="https://sarabrangioni.github.io/P-gina-Pessoal/"
-                  class="special"
-                  target="_blank"
-                  >sarabrangioni</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Tábata de Faria</h3>
-                <a
-                  href="https://tabataf.github.io/Tabata-pagina-pessoal/"
-                  class="special"
-                  target="_blank"
-                  >tabataf</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Victor Magalhães Barreto</h3>
-                <a
-                  href="https://victormagalhaesbarreto.github.io/D-Final/	"
-                  class="special"
-                  target="_blank"
-                  >VictorMagalhaesBarreto</a
-                >
-              </article>
-              <article>
-                <h3 class="major">Victor Prata</h3>
-                <a href="https://bit.ly/3lUllvf	" class="special" target="_blank"
-                  >ovictorprata</a
-                >
-              </article>
+            <section id="buserteco" class="features">
+              
             </section>
           </div>
         </section>
@@ -439,5 +94,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="./script.js"></script>
+    <script src="./script2.js"></script>
   </body>
 </html>
